--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ if (!localStorage.getItem('alertshown')) {
 					<script src="/js/drop.js"></script>
                     <li id="item6">
                         <div class="dropdown">
-                            <button onclick="myFunction()" class="dropbtn">CATEGORIES</button><br>
+                            <button onclick="myFunction()" class="dropbtn">CATEGORIES</button> <img src="/images/down-arrow-square-outlined-button.png" onclick=myFunction()></img>
                             <div id="myDropdown" class="dropdown-content">
                              <a href="/categories/anal" class="nav_dropdown-item">Anal</a>
                              <a href="/categories/aunty" class="nav_dropdown-item">Aunty</a>
