--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 
 
 
-
 	<script>
 		// Check if alert has been shown before
 		if (!localStorage.getItem('alertshown')) {
@@ -72,16 +71,17 @@
 		}
 	</script>
 
-	<script type="application/javascript"
-	data-idzone="4942486" data-ad_first_trigger_clicks="3" data-ad_next_trigger_clicks="4" data-type="desktop"
-	data-browser_settings="1"
-	data-ad_trigger_method="3"
-	src="https://a.realsrv.com/fp-interstitial.js"></script>
+	
+<script type="application/javascript" 
+data-idzone="4946228" data-ad_first_trigger_clicks="3" data-ad_next_trigger_clicks="5" data-type="desktop" 
+data-browser_settings="1" 
+data-ad_trigger_method="3" 
+src="https://a.realsrv.com/fp-interstitial.js"></script>
 
  <script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js">
  </script>
 
-<script type="application/javascript">
+<!--<script type="application/javascript">
 	(function() {
 	
 		//version 1.0.0
@@ -106,7 +106,7 @@
 	})();
 	
 	
-	</script>
+	</script>-->
 	<!--
 	<div class="top-links">
 		<div class="center-hold">
@@ -293,8 +293,7 @@ window.onclick = function (event) {
 						</li>
 						<li>
 							<div class="dropdown" onclick="myFunction()">
-								<button class="dropbtn">CATEGORIES</button> <img
-									src="/images/down-arrow-square-outlined-button.png" onclick=myFunction()></img>
+								<button class="dropbtn">CATEGORIES</button>
 								<div id="myDropdown" class="dropdown-content">
 									<a href="/categories/anal" class="nav_dropdown-item">Anal</a>
 									<a href="/categories/aunty" class="nav_dropdown-item">Aunty</a>
@@ -460,7 +459,7 @@ window.onclick = function (event) {
 									<a href="/videoweb/video2">
 										<div class="img">
 
-											<img class="thumb " src="/images//THUMBNAILS/02.jpg"
+											<img class="thumb " src="/images/THUMBNAILS/02.jpg"
 												alt="Blood Angels-clip201" width="320" height="180" />
 
 
@@ -1941,28 +1940,7 @@ window.onclick = function (event) {
 	</script>
 </body>
 <script src="/js/jQuery.js" charset="utf-8"></script>
-<script>
-	var divs = $("div.video_items").get().sort(function () {
-
-		return Math.round(Math.random()) - 0.2;
-
-	}).slice(0, 18);
-
-	$(divs).appendTo(divs[0].parentNode).show();
-</script>
-<script>
-	var divs = $("div.item  ").get().sort(function () {
-
-		return Math.round(Math.random()) - 0.2;
-
-	}).slice(0, 17);
-
-	$(divs).appendTo(divs[0].parentNode).show();
-
-
-
-
-
-</script>
+<script src="/js/shuffle.js" charset="utf-8"></script>
+<script src="/js/shuffle2.js" charset="utf-8"></script>
 
 </html>
