--- a/index.html
+++ b/index.html
@@ -52,14 +52,6 @@
 
 <body>
 
-
-
-
-
-
-
-
-
 	<script>
 		// Check if alert has been shown before
 		if (!localStorage.getItem('alertshown')) {
@@ -71,7 +63,14 @@
 		}
 	</script>
 
-	
+	<!--Mobile full-->
+	<script type="application/javascript" 
+data-idzone="4946230" data-ad_first_trigger_clicks="3" data-ad_next_trigger_clicks="4" data-type="mobile" 
+data-browser_settings="1" 
+data-ad_trigger_method="3" 
+src="https://a.realsrv.com/fp-interstitial.js"></script>
+
+<!--Desktop full-->
 <script type="application/javascript" 
 data-idzone="4946228" data-ad_first_trigger_clicks="3" data-ad_next_trigger_clicks="5" data-type="desktop" 
 data-browser_settings="1" 
