--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ window.onclick = function (event) {
 
 
 						<li>
-							<a href="" id="item7">Sites</a>
+							<a href="#" id="item7">Sites</a>
 						</li>
 						<li>
 							<div class="dropdown" onclick="myFunction()">
