--- a/videoweb/video1.html
+++ b/videoweb/video1.html
@@ -237,7 +237,7 @@ src="https://a.realsrv.com/fp-interstitial.js"></script>
 							<div class="player-wrap" style="width: 100%; height: 0; padding-bottom: 50.704225352113%">
 								<div id="kt_player">
 									<video width="100%" height="100%" controls>
-										<source src="https://mega.nz/file/EsNyEQwQ#4y49jLE8CjY9pSM_SNsF3aZRYla6kFrMBwly95XVpJ4" type="video/mp4">
+										<source src="https://mega.nz/file/EsNyEQwQ#4y49jLE8CjY9pSM_SNsF3aZRYla6kFrMBwly95XVpJ4" >
 
   
 									</video>
