--- a/index.html
+++ b/index.html
@@ -135,8 +135,16 @@ src="https://a.realsrv.com/fp-interstitial.js"></script>
 		</div>
 	</div>
 	-->
+<!--Pre loader  -->
+<script src="js/loader.js"></script>
+<div id="loader-container">
+	<div id="loader"></div>
+</div>
 
 
+
+
+<!--main content-->
 	<div class="container" id="container">
 
 		<div class="header">
