--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ window.onclick = function (event) {
 
 					<li>
 						<i class="list-4"></i>
-						<a href="" id="item8">Pornstars</a>
+						<a href="" id="item8">Pornstar</a>
 					</li>
 					<li>
 						<i class="list-5"></i>
