--- a/videoweb/video1.html
+++ b/videoweb/video1.html
@@ -236,11 +236,9 @@ src="https://a.realsrv.com/fp-interstitial.js"></script>
 						<div class="player-holder">
 							<div class="player-wrap" style="width: 100%; height: 0; padding-bottom: 50.704225352113%">
 								<div id="kt_player">
-									<video width="100%" height="100%" controls>
-										<source src="https://mega.nz/file/EsNyEQwQ#4y49jLE8CjY9pSM_SNsF3aZRYla6kFrMBwly95XVpJ4" >
-
+									
+										<iframe id="vid" width="640" height="360" frameborder="0" src="https://mega.nz/embed/osUmSApS#4y49jLE8CjY9pSM_SNsF3aZRYla6kFrMBwly95XVpJ4 ;showinfo=0&amp ;modesbranding=0" allowfullscreen ></iframe>
   
-									</video>
 								</div>
 							</div>
 
