--- a/index.html
+++ b/index.html
@@ -1644,107 +1644,107 @@ window.onclick = function (event) {
 				</div>
 			</div>
 			<div class="box tags-cloud">
-				<a href="" style="font-weight: bold; font-size: 13px;">kinkycore</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">kinkycore</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">arms tied</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">arms tied</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">dildo</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">dildo</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">brunette</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">brunette</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">erotic muscle videos</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">erotic muscle videos</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">girl sub</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">girl sub</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">missionary</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">missionary</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">black haired</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">black haired</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">pussy rubbing</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">pussy rubbing</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">legs tied</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">legs tied</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">deepthroat</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">deepthroat</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">cock sucking</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">cock sucking</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">clinical torments</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">clinical torments</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">pussy fucking</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">pussy fucking</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">cowgirl</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">cowgirl</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">cum on face</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">cum on face</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">pussy fingering</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">pussy fingering</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">vibrator</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">vibrator</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">ghetto gaggers</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">ghetto gaggers</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">insex</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">insex</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">facial abuse</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">facial abuse</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">blonde</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">blonde</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">shadowslaves</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">shadowslaves</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">doggy style</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">doggy style</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">sex and submission</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">sex and submission</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">anal</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">anal</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">femdom empire</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">femdom empire</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">ultimate surrender</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">ultimate surrender</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">high heels</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">high heels</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">inked</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">inked</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">big tits</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">big tits</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">futilestruggles</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">futilestruggles</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">tattooed guy</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">tattooed guy</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">male dom</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">male dom</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">freaks inside</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">freaks inside</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">drool</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">drool</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">average tits</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">average tits</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 13px;">kinky gate</a>
+				<a href="#" style="font-weight: bold; font-size: 13px;">kinky gate</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">painted nails</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">painted nails</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">tattooed girl</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">tattooed girl</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">oral</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">oral</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 15px;">girl tied up</a>
+				<a href="#" style="font-weight: bold; font-size: 15px;">girl tied up</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">blowjob</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">blowjob</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">pussy licking</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">pussy licking</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">natural tits</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">natural tits</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 12px;">reverse cowgirl</a>
+				<a href="#" style="font-weight: bold; font-size: 12px;">reverse cowgirl</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">fetish nation</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">fetish nation</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">tattoos</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">tattoos</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 14px;">small tits</a>
+				<a href="#" style="font-weight: bold; font-size: 14px;">small tits</a>
 				&nbsp;&nbsp;
-				<a href="" style="font-weight: bold; font-size: 16px;">plumperpass</a>
+				<a href="#" style="font-weight: bold; font-size: 16px;">plumperpass</a>
 				&nbsp;&nbsp;
-				<a href="" class="all">Show All Tags</a>
+				<a href="#" class="all">Show All Tags</a>
 			</div>
 
 
@@ -1753,7 +1753,7 @@ window.onclick = function (event) {
 
 		<h2 class="footer-title">
 		</h2>
-		<p class="footer-texts">The 32 team is always updating and adding more porn videos every day. It's all here and
+		<p class="footer-texts">The team is always updating and adding more porn videos every day. It's all here and
 			100% free porn. We have a huge free XXX DVD selection that you can download or stream. Pornhub is the most
 			complete and revolutionary porn tube site. We offer streaming porn videos, downloadable XXX DVDs, photo
 			albums, and the number 1 free sex community on the net. We’re always working towards adding more features
@@ -1782,7 +1782,7 @@ window.onclick = function (event) {
 						<li><a id="footerMenu_terms" href="./html/terms" rel="nofollow">Terms &amp; Conditions</a></li>
 						<li><a id="footerMenu_privacy" href="./html/privacypolicy" rel="nofollow">Privacy Policy</a>
 						</li>
-						<li><a id="footerMenu_dmca" href="" rel="nofollow">DMCA</a></li>
+						<li><a id="footerMenu_dmca" href="#" rel="nofollow">DMCA</a></li>
 						<li class="omega"><a id="footerMenu_btn-2257" href="" rel="nofollow">2257</a></li>
 					</ul>
 				</div>
@@ -1790,39 +1790,39 @@ window.onclick = function (event) {
 				<div class="col">
 					<ul>
 						<li class="title alpha">Work With Us</li>
-						<li><a id="footerMenu_partner" href="" rel="nofollow">Content Partners</a></li>
+						<li><a id="footerMenu_partner" href="#" rel="nofollow">Content Partners</a></li>
 						<li><a id="footerMenu_advertising" href="" rel="nofollow">Advertise</a></li>
-						<li><a href="" rel="nofollow">Webmasters</a></li>
-						<li><a href="" rel="nofollow">Model Program</a></li>
-						<li class="omega"><a href="" rel="nofollow">Press</a></li>
+						<li><a href="#" rel="nofollow">Webmasters</a></li>
+						<li><a href="#" rel="nofollow">Model Program</a></li>
+						<li class="omega"><a href="#" rel="nofollow">Press</a></li>
 					</ul>
 				</div>
 
 				<div class="col">
 					<ul>
 						<li class="title alpha">Support and Help</li>
-						<li><a id="footerMenu_faq" href="" rel="nofollow">FAQ</a></li>
+						<li><a id="footerMenu_faq" href="#" rel="nofollow">FAQ</a></li>
 						<li>
-							<a href="" rel="nofollow">
+							<a href="#" rel="nofollow">
 								Contact Support</a>
 						</li>
-						<li><a href="" rel="nofollow">Feedback Forum</a></li>
-						<li class="omega"><a href="">Sitemap</a></li>
+						<li><a href="#" rel="nofollow">Feedback Forum</a></li>
+						<li class="omega"><a href="#">Sitemap</a></li>
 					</ul>
 				</div>
 
 				<div class="col">
 					<ul>
 						<li class="title alpha">Discover</li>
-						<li><a href="">Pornhub Blog</a></li>
-						<li><a href="">Insights Blog</a></li>
-						<li><a href="">Sexual Wellness Center</a></li>
-						<li><a onclick="javascript:void(0);" href="">Mobile </a>
-							<a onclick="javascript:void(0);" href=""> Tablet </a>
+						<li><a href="#">Pornhub Blog</a></li>
+						<li><a href="#">Insights Blog</a></li>
+						<li><a href="#">Sexual Wellness Center</a></li>
+						<li><a onclick="javascript:void(0);" href="#">Mobile </a>
+							<a onclick="javascript:void(0);" href="#"> Tablet </a>
 						</li>
 						<!--TODO adjust the link-->
-						<li><a onclick="javascript:void(0);" href=""> Visually Impaired</a></li>
-						<li class="omega"><a href="">More</a></li>
+						<li><a onclick="javascript:void(0);" href="#"> Visually Impaired</a></li>
+						<li class="omega"><a href="#">More</a></li>
 					</ul>
 				</div>
 			</div>
@@ -1862,7 +1862,7 @@ window.onclick = function (event) {
 					data-src="https://di.phncdn.com/www-static/images/socialIcons/Discord.svg?cache=2019100301"
 					data-img_type="image">
 			</a>
-			<span class="copyright">© Pornhub.com, 2022</span>
+			<!-- <span class="copyright">© Pornhub.com, 2022</span> -->
 		</div>
 	</div>
 	</div>
