--- a/videoweb/video18.html
+++ b/videoweb/video18.html
@@ -234,7 +234,7 @@
 									<video width="100%" height="100%" controls>
 										<source
 											src="https://res.cloudinary.com/dcocxyeco/video/upload/v1681754211/Vids/Video_18_suhdba.mp4
-                      ">
+                      "  type="video/mp4">
 
 									</video>
 								</div>
@@ -407,10 +407,10 @@
 												<div class="custom-size">
 													<label for="share_embed_code_width" class="field-label">Embed
 														size</label>
-													<input type="text" id="share_embed_code_width" value="852"
+													<input type="text" id="share_embed_code_width" value="560"
 														class="textfield embed-code-custom-width">
 													<label for="share_embed_code_height">x</label>
-													<input type="text" id="share_embed_code_height" value="480"
+													<input type="text" id="share_embed_code_height" value="400"
 														class="textfield embed-code-custom-height">
 												</div>
 											</div>
