--- a/first.html
+++ b/first.html
@@ -296,23 +296,23 @@
 							<div id="tab_screenshots" class="tab-content hidden">
 								<div class="block-screenshots">
 									<a href="" class="item" rel="screenshots" data-fancybox-type="image">
-										<img class="thumb " src="/static/images/black-screen.jpg" width="320"
+										<img class="thumb " src="/images/unavailable-img.jpg" width="320"
 											height="180" alt="GHETTO GAGGERS - Amani Wett 2">
 									</a>
 									<a href="" class="item" rel="screenshots" data-fancybox-type="image">
-										<img class="thumb " src="/static/images/black-screen.jpg" width="320"
+										<img class="thumb " src="/images/unavailable-img.jpg" width="320"
 											height="180" alt="GHETTO GAGGERS - Amani Wett 2">
 									</a>
 									<a href="" class="item" rel="screenshots" data-fancybox-type="image">
-										<img class="thumb " src="/static/images/black-screen.jpg" width="320"
+										<img class="thumb " src="/images/unavailable-img.jpg" width="320"
 											height="180" alt="GHETTO GAGGERS - Amani Wett 2">
 									</a>
 									<a href="" class="item" rel="screenshots" data-fancybox-type="image">
-										<img class="thumb " src="/static/images/black-screen.jpg" width="320"
+										<img class="thumb " src="/images/unavailable-img.jpg" width="320"
 											height="180" alt="GHETTO GAGGERS - Amani Wett 2">
 									</a>
 									<a href="" class="item" rel="screenshots" data-fancybox-type="image">
-										<img class="thumb " src="/static/images/black-screen.jpg" width="320"
+										<img class="thumb " src="/images/unavailable-img.jpg" width="320"
 											height="180" alt="GHETTO GAGGERS - Amani Wett 2">
 									</a>
 								</div>
@@ -613,7 +613,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="FACIAL ABUSE - Richard Maddow" data-preview="" width="320"
 											height="180" />
 
@@ -661,7 +661,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="LATINA ABUSE - Dani" width="320" height="180" />
 
 
@@ -705,7 +705,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="GHETTO GAGGERS - Jada Fire" data-preview="" width="320" height="180" />
 
 
@@ -751,7 +751,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="FTKL Tickling Asian girls humiliate white girl with stinky feet"
 											data-preview="" width="320" height="180" />
 
@@ -798,7 +798,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="Clinical torments-clip169" data-preview="" width="320" height="180" />
 
 
@@ -844,7 +844,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="Coke in the ass and head in the toilet! Furious orgy!" width="320"
 											height="180" />
 
@@ -889,7 +889,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="BLACK ON BLACK CRIME - Sparkles" data-preview="" width="320"
 											height="180" />
 
@@ -936,7 +936,7 @@
 
 									<div class="img">
 
-										<img class="thumb " src="/static/images/black-screen.jpg"
+										<img class="thumb " src="/images/unavailable-img.jpg"
 											alt="FACIAL ABUSE - Holly North" data-preview="" width="320" height="180" />
 
 
