--- a/videoweb/video3.html
+++ b/videoweb/video3.html
@@ -233,7 +233,7 @@
 								<div id="kt_player">
 									<video width="100%" height="100%" controls>
 										<source
-											src="https://res.cloudinary.com/dcocxyeco/video/upload/v1681753910/Vids/Video_3_midnq8.mp4" type="video/mp4">
+											src="https://res.cloudinary.com/dcocxyeco/video/upload/v1681753910/Vids/Video_3_midnq8.mp4">
 
 									</video>
 								</div>
@@ -406,10 +406,10 @@
 												<div class="custom-size">
 													<label for="share_embed_code_width" class="field-label">Embed
 														size</label>
-													<input type="text" id="share_embed_code_width" value="560"
+													<input type="text" id="share_embed_code_width" value="852"
 														class="textfield embed-code-custom-width">
 													<label for="share_embed_code_height">x</label>
-													<input type="text" id="share_embed_code_height" value="400"
+													<input type="text" id="share_embed_code_height" value="480"
 														class="textfield embed-code-custom-height">
 												</div>
 											</div>
