--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ window.onclick = function (event) {
 										</div>
 
 										<strong class="title">
-											desi hot sexy video
+											desi hot sexy vide
 										</strong>
 										<div class="wrap">
 											<div class="username">
