--- a/upload.html
+++ b/upload.html
@@ -343,13 +343,15 @@
                 <select id="category" required style="accent-color: orange;">
                     <option value="main">MAIN</option>
                     <option value="arab">ARAB</option>
-                    <option value="asian">ASIAN</option>
+                   
                     <option value="bhabhi">BHABHI</option>
                     <option value="bbc">BBC</option>
                     <option value="bigtits">BIGTITS</option>
+                    <option value="bollywood">BOLLYWOOD</option>
                     <option value="blowjob">BLOWJOB</option>
                     <option value="gangbang">GANGBANG</option>
                     <option value="hardcore">HARDCORE</option>
+                    <option value="jav">JAV</option>
                     <option value="mms">MMS</option>
                     <option value="milf">MILF</option>
                     <option value="exclusive">EXCLUSIVE</option>
