--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ window.onclick = function (event) {
 									<a href="./categories/mms" class="nav_dropdown-item">MMS</a>
 									<!-- <a href="./categories/movie" class="nav_dropdown-item">Movie</a>
 									<a href="./categories/solo" class="nav_dropdown-item">Solo</a> -->
-									<a href="../categories/exclusive" class="nav_dropdown-item">Exclusive</a>
+									<a href="./categories/exclusive" class="nav_dropdown-item">Exclusive</a>
 
 								</div>
 							</div>
