--- a/index.html
+++ b/index.html
@@ -316,10 +316,12 @@ window.onclick = function (event) {
 									<a href="./categories/blowjob" class="nav_dropdown-item">BigTits</a>
 									<!-- <a href="./categories/black" class="nav_dropdown-item">Black</a> -->
 									<a href="./categories/blowjob" class="nav_dropdown-item">BLOWJOB</a>
-									<!-- <a href="./categories/cumshot" class="nav_dropdown-item">Cumshot</a>
-									<a href="./categories/deepthroat" class="nav_dropdown-item">Deepthroat</a> -->
+									<!-- <a href="./categories/cumshot" class="nav_dropdown-item">Cumshot</a> -->
+										<a href="./categories/bollywood.html" class="nav_dropdown-item">BOLLYWOOD</a>
+									<a href="./categories/deepthroat" class="nav_dropdown-item">Deepthroat</a>
 									<a href="./categories/gangbang" class="nav_dropdown-item">Gangbang</a>
 									<a href="./categories/hardcore" class="nav_dropdown-item">Hardcore</a>
+									<a href="./categories/jav" class="nav_dropdown-item">JAV</a>
 									<!-- <a href="./categories/hentai" class="nav_dropdown-item">Hentai</a>
 									<a href="./categories/hindi" class="nav_dropdown-item">Hindi</a>
 									<a href="./categories/indian" class="nav_dropdown-item">Indian</a>
